Slowdown when opening add menu or search menu for the first time in the node editor #103187

Closed
opened 2022-12-13 15:44:48 +01:00 by Dalai Felinto · 16 comments

Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: a95bf1ac01
Worked: 3.3

Short description of error
Slowdown when opening add menu or search menu for the first time in the node editor. The asset libraries don't need to have any node group assets.

Exact steps for others to reproduce the error

  • Still waiting for better steps to reproduce, but enough users have been reporting this.
**Blender Version** Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: `a95bf1ac01` Worked: 3.3 **Short description of error** Slowdown when opening add menu or search menu for the first time in the node editor. The asset libraries don't need to have any node group assets. **Exact steps for others to reproduce the error** * Still waiting for better steps to reproduce, but enough users have been reporting this.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

#103725 was marked as duplicate of this issue

#103725 was marked as duplicate of this issue

#101359 was marked as duplicate of this issue

#101359 was marked as duplicate of this issue
Author
Owner

Added subscribers: @JacquesLucke, @HooglyBoogly, @JulianEisel
Removed subscriber: @dfelinto

Added subscribers: @JacquesLucke, @HooglyBoogly, @JulianEisel Removed subscriber: @dfelinto
Jacques Lucke was assigned by Dalai Felinto 2022-12-13 15:46:53 +01:00
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Jacques is investigating this at the moment.

Jacques is investigating this at the moment.

Added subscriber: @mod_moder

Added subscriber: @mod_moder

This comment was removed by @mod_moder

*This comment was removed by @mod_moder*
Author
Owner

This was reported on https://developer.blender.org/T101359. I'll leave this open for now to have one high priority report for this. But the moment either of them have good reproduction steps we close the other one as duplicated.

This was reported on https://developer.blender.org/T101359. I'll leave this open for now to have one high priority report for this. But the moment either of them have good reproduction steps we close the other one as duplicated.
Member

Two main issues as far as I can tell right now:

  • We invalidate cached asset data when we shouldn't have to. This happens by calling AssetList::tagMainDataDirty e.g. during undo or id remapping.
  • When the cache is updated again, there are file system operations on the main thread which block the ui. See image below:

image.png

Two main issues as far as I can tell right now: * We invalidate cached asset data when we shouldn't have to. This happens by calling `AssetList::tagMainDataDirty` e.g. during undo or id remapping. * When the cache is updated again, there are file system operations on the main thread which block the ui. See image below: ![image.png](https://archive.blender.org/developer/F14055785/image.png)

This issue was referenced by e01b98cdb6

This issue was referenced by e01b98cdb603cff044173276d937ea5507289b8c

This issue was referenced by ea731f42db

This issue was referenced by ea731f42db32bf8bf3bf0f799fb4a6d298922b52
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Added subscribers: @Erindale, @MIDIManNI, @Dimitar, @Kuboa, @Simaris, @msamilg-3, @Azagwen, @Jeppe-Mygh, @mano-wii, @costa, @cmbasnett, @OmarEmaraDev, @Julieta-Riley, @genesis2303, @persun, @PratikPB2123, @Slowwkidd

Added subscriber: @levybergman

Added subscriber: @levybergman

On Intel Mac computers it's still a running issue and bug in Blender 3.4.1 Geo Node editor. Same goes to recent Blender 3.5 Alpha version.

On Intel Mac computers it's still a running issue and bug in Blender 3.4.1 Geo Node editor. Same goes to recent Blender 3.5 Alpha version.
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:01 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103187
No description provided.